# Icu

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  requirements.txt
config/: icu.json  icu.schema.json
interface/: Icu.h  Icu_Externals.h  Icu_Types.h
script/: header.h.jinja2  source.c.jinja2
source/: Icu.c
test/: __init__.py  conftest.py  parameter.py  test_autosar_sws.py
test/stub/: Icu_MemMap.h
test/stub/common/: Compiler.h
